# kstack-lib

./: .envrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHECKPOINT-2025-01-10-COMPLETE.md  CHECKPOINT-2025-01-10.md  Makefile  PHASE5-STATUS.md  README.md  TODO.md  mkdocs.yml  pyproject.toml  shell.nix  tox.ini
.github/workflows/: test.yml
docs/: CHANGELOG.md  getting-started.md  index.md
docs/api/: README.md  cal-configuration.md  cal_examples.md  clients.md  config.md  localstack.md  overview.md  redis.md  redis_examples.md  types.md
docs/architecture/: README.md  cal-architecture.md  ioc-container.md
docs/development/: contributing.md  testing.md
docs/guide/: configuration.md  localstack-client.md  redis-client.md  secrets-management.md
examples/: README.md  configmap_example.py
examples/layer3/: redis_operations.py  s3_operations.py
kstack_lib/: __init__.py  _version.py  exceptions.py  vault.py
kstack_lib/any/: __init__.py  cloud_sessions.py  container.py  context.py  exceptions.py  protocols.py  utils.py
kstack_lib/any/types/: __init__.py
kstack_lib/cal/: __init__.py  container.py  factory.py  ioc.py  protocols.py
kstack_lib/cal/adapters/: __init__.py  aws_family.py
kstack_lib/clients/: __init__.py  localstack.py  redis.py
kstack_lib/cluster/: _base.py  _guards.py
kstack_lib/cluster/config/: environment.py
kstack_lib/cluster/security/: secrets.py
kstack_lib/config/: __init__.py  _vault_helpers.py  cluster.py  configmap.py  loaders.py  localstack.py  redis.py  schemas.py  secrets.py
kstack_lib/local/: __init__.py  _guards.py
kstack_lib/local/config/: environment.py
kstack_lib/local/security/: credentials.py  vault.py
kstack_lib/types/: __init__.py  environments.py  layers.py  routes.py  services.py
kstack_lib/utils/: __init__.py  file.py
prior-plans/: REFACTOR-STATUS.md
site/: 404.html  index.html  objects.inv  sitemap.xml
site/CHANGELOG/: index.html
site/api/clients/: index.html
site/api/config/: index.html
site/development/contributing/: index.html
site/development/testing/: index.html
site/getting-started/: index.html
site/guide/configuration/: index.html
site/guide/localstack-client/: index.html
site/guide/redis-client/: index.html
site/search/: search_index.json
tests/: __init__.py  conftest.py  test_configmap.py  test_container.py  test_exceptions.py  test_local_environment.py  test_localstack_client.py  test_localstack_config.py  test_redis_client.py  test_redis_config.py  test_secrets_access.py  test_service_enums.py  test_types.py
tests/any/: test_cloud_sessions.py  test_utils.py
tests/cal/: test_aws_adapter.py  test_container.py  test_ioc.py  test_protocols.py
tests/cluster/: __init__.py  test_environment.py  test_secrets.py
tests/config/: test_loaders.py  test_schemas.py
tests/integration/: test_layer3_s3.py
tests/integration/results/: layer3-s3-test-results.md
tests/local/: test_credentials.py  test_vault.py
vault/dev/: redis-cloud.yaml
vault/development/layer1/: redis.yaml
